HttpDataAdapterBase (and extending classes) now expect a base address in the form of a java.net.URL, instead of java.net.URI. (ref issue #23)